src/assets/elements/EndGameModal/EndGameModal.scss
.modal-element {
  position: fixed;
  left: 0;
  top: 0;
  width: 100vw;
  height: 100vh;
  display: flex;
  align-items: center;
  justify-content: center;

  .modal-bg {
    position: absolute;
    background-color: rgba(0.2, 0.2, 0.2, 0.5);
    width: 100%;
    height: 100%;
  }

  .modal {
    z-index: 1000;
    display: flex;
    flex-direction: column;
    gap: 2px;
    box-shadow: 0 0 24px 2px rgba(0.2, 0.2, 0.2, 0.1);

    .modal-content {
      background-color: white;
      padding: 16px 28px;
      text-align: left;

      .modal-body {
        .modal-body-line {
          display: flex;
          flex-direction: row;
          justify-content: space-between;

          p {
            font-size: 16pt;
          }
        }
      }
    }

    .modal-button-container {
      display: flex;
      flex-direction: column;
      gap: 2px;

      .button-row {
        display: flex;
        flex-direction: row;
        justify-content: center;
        gap: 2px;
      }

      .modal-button {
        flex: 1;
        border: none;
        padding: 12px;
      }
    }
  }
}

@media (max-width: 600px) {
  .modal {
    width: 90%;
  }
}

